@@ -2,6 +2,11 @@
 \title{DExMA News}
 \encoding{UTF-8}
 
+\section{version 1.0.2}{
+    \itemize{
+    \item Weights added to the Stouffer's method
+    }
+}
 
 \section{Version 0.99.0}{
   \itemize{
